--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,7 @@ phonenumbers==8.13.27
 django-environ==0.11.2
 django-storages==1.14.2
 razorpay==1.4.1
+python-dotenv==1.0.0
+dj-database-url==2.1.0
+gunicorn==21.2.0
+whitenoise==6.6.0
